Completed Flask Frontend

--- a/flights_preprocessing.ipynb
+++ b/flights_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "6e1cc348",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "f5cc0a67",
    "metadata": {},
    "outputs": [
@@ -211,7 +211,7 @@
        "9   695.30  1.76    676.53      Rainbow  10/26/2019  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "3a0dec32",
    "metadata": {},
    "outputs": [],
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "4e7a460a",
    "metadata": {},
    "outputs": [],
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "23e9961b",
    "metadata": {},
    "outputs": [
@@ -358,7 +358,7 @@
        "4    830.86      CloudFy  10/10/2019  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "19e9e5d9",
    "metadata": {},
    "outputs": [
@@ -385,7 +385,7 @@
        "       [0., 0., 0., ..., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "980b6bda",
    "metadata": {},
    "outputs": [
@@ -423,7 +423,7 @@
        "       dtype=object)]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "ffb1178c",
    "metadata": {},
    "outputs": [
@@ -444,7 +444,7 @@
        "(271888, 18)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "641f02b6",
    "metadata": {},
    "outputs": [
@@ -465,7 +465,7 @@
        "array(['firstClass', 'economic', 'premium'], dtype=object)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "id": "6503f4da",
    "metadata": {},
    "outputs": [],
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "c7319812",
    "metadata": {},
    "outputs": [],
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "id": "d06db788",
    "metadata": {},
    "outputs": [
@@ -615,7 +615,7 @@
        "4    830.86      CloudFy  10/10/2019  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "id": "7f6f630c",
    "metadata": {},
    "outputs": [],
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "id": "f755cc69",
    "metadata": {},
    "outputs": [
@@ -652,7 +652,7 @@
        "       [-0.41456697, -0.3933792 ]])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "id": "bc2eb5db",
    "metadata": {},
    "outputs": [
@@ -686,7 +686,7 @@
        "       [1., 0., 0.]])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "id": "c728b3a8",
    "metadata": {},
    "outputs": [
@@ -712,7 +712,7 @@
        "[array(['CloudFy', 'FlyingDrops', 'Rainbow'], dtype=object)]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 21,
    "id": "c659e98b",
    "metadata": {},
    "outputs": [],
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
    "id": "4cbb3afe",
    "metadata": {},
    "outputs": [
@@ -876,7 +876,7 @@
        "4    830.86      CloudFy 2019-10-10  2019     10            3            10  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -988,6 +988,405 @@
     "# saving the Model ready data matrix : final_matrix and the targer feature array : y \n",
     "\n",
     "np.savez(\"data/flights_cleaned.npz\" , X = final_matrix , y = y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "3718a31d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Saving list of unique values for necessary features.It will be used in Flask API .\n",
+    "import pickle\n",
+    "# saving agency list\n",
+    "agency_list = sorted(flights['agency'].unique().tolist())\n",
+    "with open(\"artifacts/agency_list.pkl\" , \"wb\") as f:\n",
+    "    pickle.dump(agency_list , f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "9477519c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# saving date range \n",
+    "min_date = flights['date'].min()\n",
+    "max_date = flights['date'].max()\n",
+    "\n",
+    "date_range = {\"min_date\": min_date,\n",
+    "\"max_date\": max_date}\n",
+    "\n",
+    "with open(\"artifacts/date_range.pkl\" , \"wb\") as f:\n",
+    "    pickle.dump(date_range , f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "6eb18703",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(Timestamp('2019-09-26 00:00:00'), Timestamp('2023-07-24 00:00:00'))"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min_date , max_date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "188618b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flight_type_list = sorted(flights['flightType'].unique().tolist())\n",
+    "with open(\"artifacts/flight_type_list.pkl\" , \"wb\") as f:\n",
+    "    pickle.dump(flight_type_list , f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "efa8f339",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['travelCode', 'userCode', 'from', 'to', 'flightType', 'price', 'time',\n",
+       "       'distance', 'agency', 'date'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flights.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "202990b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Recife (PE)', 'Florianopolis (SC)', 'Brasilia (DF)',\n",
+       "       'Aracaju (SE)', 'Salvador (BH)', 'Campo Grande (MS)',\n",
+       "       'Sao Paulo (SP)', 'Natal (RN)', 'Rio de Janeiro (RJ)'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flights['from'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "5a870d4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[676.53]\n",
+      "[637.56]\n"
+     ]
+    }
+   ],
+   "source": [
+    "mask = (\n",
+    "    (flights[\"from\"] == \"Recife (PE)\") &\n",
+    "    (flights[\"to\"] == \"Florianopolis (SC)\")\n",
+    ")\n",
+    "\n",
+    "distances = flights.loc[mask, \"distance\"]\n",
+    "print(distances.unique())\n",
+    "\n",
+    "# ----------------------------------------------\n",
+    "\n",
+    "mask = (\n",
+    "    (flights[\"from\"] == 'Brasilia (DF)') &\n",
+    "    (flights[\"to\"] == \"Florianopolis (SC)\")\n",
+    ")\n",
+    "\n",
+    "distances = flights.loc[mask, \"distance\"]\n",
+    "print(distances.unique())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "22f3ad7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            from                   to  distance\n",
+      "0   Aracaju (SE)        Brasilia (DF)  [425.98]\n",
+      "1   Aracaju (SE)    Campo Grande (MS)   [650.1]\n",
+      "2   Aracaju (SE)   Florianopolis (SC)  [808.85]\n",
+      "3   Aracaju (SE)           Natal (RN)  [176.33]\n",
+      "4   Aracaju (SE)          Recife (PE)  [555.74]\n",
+      "5   Aracaju (SE)  Rio de Janeiro (RJ)  [597.61]\n",
+      "6   Aracaju (SE)        Salvador (BH)  [830.86]\n",
+      "7   Aracaju (SE)       Sao Paulo (SP)  [392.76]\n",
+      "8  Brasilia (DF)         Aracaju (SE)  [425.98]\n",
+      "9  Brasilia (DF)    Campo Grande (MS)   [277.7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# getting unique distances between each unique combination of from and to cities\n",
+    "\n",
+    "\n",
+    "distance_map = (\n",
+    "    flights\n",
+    "    .groupby([\"from\", \"to\"])[\"distance\"]\n",
+    "    .unique()\n",
+    "    .reset_index()\n",
+    ")\n",
+    "\n",
+    "print(distance_map.head(10))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e028c7b0",
+   "metadata": {},
+   "source": [
+    "We can see that the distance between each unique from and to location is different. But also a single unique distance for for each unique pair of for and to cities.\n",
+    "\n",
+    "Basically , we can directly infer the distance between from and to cities.We will save this mapping as a dictionary for later use in our Flask API."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "3e2c02be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "city_pair_distance = {}\n",
+    "\n",
+    "for _,row in distance_map.iterrows():\n",
+    "    from_city = row[\"from\"]\n",
+    "    to_city = row[\"to\"]\n",
+    "    distance = row[\"distance\"][0]\n",
+    "    #forward mapping\n",
+    "    city_pair_distance[(from_city , to_city)] = distance\n",
+    "    #reverse mapping\n",
+    "    city_pair_distance[(to_city , from_city)] = distance\n",
+    "\n",
+    "\n",
+    "with open(\"artifacts/city_pair_distance.pkl\" , \"wb\") as f:\n",
+    "    pickle.dump(city_pair_distance , f)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "184ef819",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>from</th>\n",
+       "      <th>to</th>\n",
+       "      <th>unique_time_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Aracaju (SE)</td>\n",
+       "      <td>Brasilia (DF)</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>Recife (PE)</td>\n",
+       "      <td>Natal (RN)</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>Rio de Janeiro (RJ)</td>\n",
+       "      <td>Campo Grande (MS)</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>Rio de Janeiro (RJ)</td>\n",
+       "      <td>Brasilia (DF)</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>Rio de Janeiro (RJ)</td>\n",
+       "      <td>Aracaju (SE)</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>Florianopolis (SC)</td>\n",
+       "      <td>Rio de Janeiro (RJ)</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>Florianopolis (SC)</td>\n",
+       "      <td>Salvador (BH)</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>Florianopolis (SC)</td>\n",
+       "      <td>Sao Paulo (SP)</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>Natal (RN)</td>\n",
+       "      <td>Aracaju (SE)</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <td>Sao Paulo (SP)</td>\n",
+       "      <td>Salvador (BH)</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>70 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   from                   to  unique_time_count\n",
+       "0          Aracaju (SE)        Brasilia (DF)                  1\n",
+       "44          Recife (PE)           Natal (RN)                  1\n",
+       "50  Rio de Janeiro (RJ)    Campo Grande (MS)                  1\n",
+       "49  Rio de Janeiro (RJ)        Brasilia (DF)                  1\n",
+       "48  Rio de Janeiro (RJ)         Aracaju (SE)                  1\n",
+       "..                  ...                  ...                ...\n",
+       "29   Florianopolis (SC)  Rio de Janeiro (RJ)                  1\n",
+       "30   Florianopolis (SC)        Salvador (BH)                  1\n",
+       "31   Florianopolis (SC)       Sao Paulo (SP)                  1\n",
+       "32           Natal (RN)         Aracaju (SE)                  1\n",
+       "69       Sao Paulo (SP)        Salvador (BH)                  1\n",
+       "\n",
+       "[70 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Now inspecting for time feature\n",
+    "\n",
+    "# Checking how many unique time values are there for each unique from and to city pair\n",
+    "\n",
+    "time_variation = (\n",
+    "    flights\n",
+    "    .groupby([\"from\", \"to\"])[\"time\"]\n",
+    "    .nunique()\n",
+    "    .reset_index(name=\"unique_time_count\")\n",
+    ")\n",
+    "time_variation.sort_values(\"unique_time_count\", ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fccc5672",
+   "metadata": {},
+   "source": [
+    "For time also , there is a single unique time for each unique pair of from and to cities. We will save this mapping as a dictionary for later use in our Flask API.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "6a5af50f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "route_time_df = (\n",
+    "    flights\n",
+    "    .groupby([\"from\", \"to\"])[\"time\"]\n",
+    "    .agg(lambda x: x.mode().iloc[0])\n",
+    "    .reset_index()\n",
+    ")\n",
+    "\n",
+    "city_pair_time = {}\n",
+    "\n",
+    "for _, row in route_time_df.iterrows():\n",
+    "    from_city = row[\"from\"]\n",
+    "    to_city = row[\"to\"]\n",
+    "    time_val = row[\"time\"]\n",
+    "\n",
+    "    # forward\n",
+    "    city_pair_time[(from_city, to_city)] = time_val\n",
+    "    # reverse\n",
+    "    city_pair_time[(to_city, from_city)] = time_val\n",
+    "\n",
+    "\n",
+    "with open(\"artifacts/city_pair_time.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(city_pair_time, f)"
    ]
   },
   {
